--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ font-family: Copperplate, Papyrus, fantasy;
 </style>
 </head>
 
-<body background="C:\Users\Admin\Desktop\SkySalon\background.jpg">
+<body background="background.jpg">
 <div class="navbg"></div><a href="C:\Users\Admin\Desktop\SkySalon\index.html">
 <img class="logo" width="100px" height="70px"src="C:\Users\Admin\Desktop\SkySalon\logo2.jpg">
 </a>
