--- a/booking.html
+++ b/booking.html
@@ -193,16 +193,16 @@ font-family: Copperplate, Papyrus, fantasy;
 <table border="0" width="60%" height="40px" class="pages">
 	<tr>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\index.html">Home</a></font>
+			<a class="m" onclick="#ffffff" href="index.html">Home</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\services.html">Services</a></font>
+			<a class="m" onclick="#ffffff" href="services.html">Services</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\booking.html">Booking</a></font>
+			<a class="m" onclick="#ffffff" href="booking.html">Booking</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\aboutus.html"></a></font>
+			<a class="m" onclick="#ffffff" href="aboutus.html"></a></font>
 		</td>
 	</tr>
 </table>
@@ -216,7 +216,7 @@ font-family: Copperplate, Papyrus, fantasy;
 	</tr>
 </table>
 
-<button class="booknow"><a href="C:\Users\Admin\Desktop\SkySalon\bookingreg.html">Book Now!</a></button>
+<button class="booknow"><a href="bookingreg.html">Book Now!</a></button>
 
 <div class="footer">
 <footer class="font">
@@ -249,7 +249,7 @@ font-family: Copperplate, Papyrus, fantasy;
   </tr>
 
   <tr align="right">
-    <td align="right"><img width="100px" height="40px" src="C:\Users\Admin\Desktop\SkySalon\WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
+    <td align="right"><img width="100px" height="40px" src="WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
   </tr>
 </table>
 </div>
