--- a/bookingreg.html
+++ b/bookingreg.html
@@ -118,9 +118,9 @@ a.l:active{
 	<form><center>
 		<h1>Customer Details</h1><br>
 		<p>Enter your details below</p><br>
-		<button class="one" type="text" id="email"><a class="l" href="C:\Users\Admin\Desktop\SkySalon\applicationform.html">Continue with Google</a></button><br><br><br>
-		<button class="two" type="text" id="email"><a class="l" href="C:\Users\Admin\Desktop\SkySalon\applicationform.html">Continue with Apple</a></button><br><br><br>
-		<button class="three" type="text" id="email"><a class="l" href="C:\Users\Admin\Desktop\SkySalon\applicationform.html">Continue with Facebook</a></button><br><br>
+		<button class="one" type="text" id="email"><a class="l" href="applicationform.html">Continue with Google</a></button><br><br><br>
+		<button class="two" type="text" id="email"><a class="l" href="applicationform.html">Continue with Apple</a></button><br><br><br>
+		<button class="three" type="text" id="email"><a class="l" href="applicationform.html">Continue with Facebook</a></button><br><br>
         <div class="email">
         	<p>Or</p><br>
             <label>Email</label>
@@ -128,7 +128,7 @@ a.l:active{
             </div>
             <br>
             <br>
-  <button type="sumbit"><a href='C:\Users\Admin\Desktop\SkySalon\applicationform.html' type="sumbit">Next</a></button>
+  <button type="sumbit"><a href='applicationform.html' type="sumbit">Next</a></button>
                          
                        
 
