--- a/index.html
+++ b/index.html
@@ -201,23 +201,23 @@ font-family: Copperplate, Papyrus, fantasy;
 </head>
 
 <body background="background.jpg">
-<div class="navbg"></div><a href="C:\Users\Admin\Desktop\SkySalon\index.html">
-<img class="logo" width="100px" height="70px"src="C:\Users\Admin\Desktop\SkySalon\logo2.jpg">
+<div class="navbg"></div><a href="index.html">
+<img class="logo" width="100px" height="70px"src="logo2.jpg">
 </a>
 <center>
 <table border="0" width="60%" height="40px" class="pages">
 	<tr>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\index.html">Home</a></font>
+			<a class="m" onclick="#ffffff" href="index.html">Home</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\services.html">Services</a></font>
+			<a class="m" onclick="#ffffff" href="services.html">Services</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\booking.html">Booking</a></font>
+			<a class="m" onclick="#ffffff" href="booking.html">Booking</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\aboutus.html"></a></font>
+			<a class="m" onclick="#ffffff" href="aboutus.html"></a></font>
 		</td>
 	</tr>
 </table>
@@ -236,7 +236,7 @@ font-family: Copperplate, Papyrus, fantasy;
 	</tr>
 </table>
 
-<button type="button" onclick="#ffffff" class="booknow"><a href="C:\Users\Admin\Desktop\SkySalon\bookingreg.html">Book Now</a></button>
+<button type="button" onclick="#ffffff" class="booknow"><a href="bookingreg.html">Book Now</a></button>
 
 
 <div class="footer">
@@ -270,7 +270,7 @@ font-family: Copperplate, Papyrus, fantasy;
   </tr>
 
   <tr align="right">
-    <td align="right"><img width="100px" height="40px" src="C:\Users\Admin\Desktop\SkySalon\WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
+    <td align="right"><img width="100px" height="40px" src="WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
   </tr>
 </table>
 </div>
