--- a/services.html
+++ b/services.html
@@ -478,24 +478,24 @@ div.align{
 </style>
 </head>
 
-<body background="C:\Users\Admin\Desktop\SkySalon\istockphoto-910871704-612x612.jpg">
-<div class="navbg"></div><a href="C:\Users\Admin\Desktop\SkySalon\index.html">
-<img class="logo" width="100px" height="70px"src="C:\Users\Admin\Desktop\SkySalon\logo2.jpg">
+<body background="istockphoto-910871704-612x612.jpg">
+<div class="navbg"></div><a href="index.html">
+<img class="logo" width="100px" height="70px"src="logo2.jpg">
 </a>
 <center>
 <table border="0" width="60%" height="40px" class="pages">
 	<tr>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\index.html">Home</a></font>
+			<a class="m" onclick="#ffffff" href="index.html">Home</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\services.html">Services</a></font>
+			<a class="m" onclick="#ffffff" href="services.html">Services</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\booking.html">Booking</a></font>
+			<a class="m" onclick="#ffffff" href="booking.html">Booking</a></font>
 		</td>
 		<td align="center" class="td"><font color="#000000" size="4">
-			<a class="m" onclick="#ffffff" href="C:\Users\Admin\Desktop\SkySalon\aboutus.html"></a></font>
+			<a class="m" onclick="#ffffff" href="aboutus.html"></a></font>
 		</td>
 	</tr>
 </table>
@@ -526,19 +526,19 @@ div.align{
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (1).jpg" style="width:100%">
+  <img src="sld (1).jpg" style="width:100%">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (2).jpg" style="width:100%">
+  <img src="sld (2).jpg" style="width:100%">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (3).jpg" style="width:100%">
+  <img src="sld (3).jpg" style="width:100%">
   
 </div>
 
@@ -566,19 +566,19 @@ div.align{
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (4).jpg" style="width:100%">
+  <img src="sld (4).jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (5).jpg" style="width:100%">
+  <img src="sld (5).jpg" style="width:100%">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="C:\Users\Admin\Desktop\SkySalon\sld (6).jpg" style="width:100%">
+  <img src="sld (6).jpg" style="width:100%">
   
 </div>
 
@@ -703,7 +703,7 @@ function showSlides() {
   </tr>
 
   <tr align="right">
-    <td align="right"><img width="100px" height="40px" src="C:\Users\Admin\Desktop\SkySalon\WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
+    <td align="right"><img width="100px" height="40px" src="WhatsApp Image 2022-07-26 at 3.07.54 PM.jpeg">
   </tr>
 </table>
 </div>
