--- a/booking.html
+++ b/booking.html
@@ -185,9 +185,9 @@ font-family: Copperplate, Papyrus, fantasy;
  
 	</style>
 </head>
-<body background="C:\Users\Admin\Desktop\SkySalon\istockphoto-1277309219-612x612.jpg">
-<div class="navbg"></div><a href="C:\Users\Admin\Desktop\SkySalon\index.html">
-<img class="logo" width="100px" height="70px"src="C:\Users\Admin\Desktop\SkySalon\logo2.jpg">
+<body background="istockphoto-1277309219-612x612.jpg">
+<div class="navbg"></div><a href="index.html">
+<img class="logo" width="100px" height="70px"src="logo2.jpg">
 </a>
 <center>
 <table border="0" width="60%" height="40px" class="pages">
